Modified: Fix horizontal overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,7 +41,7 @@ html {
 
 body {
   margin: 0;
-  min-width: 100vw;
+  min-width: 100%;
   min-height: 100vh;
 }
 
